# people_detection

./: README.md  docker-compose.yml
detector_back/api/: Dockerfile  api.py  setup.py
detector_back/worker/: Dockerfile  setup.py  worker.py  worker_config.yaml
detector_back/worker/detector/: .dockerignore  setup.py
detector_back/worker/detector/detector/: __init__.py  export_onnx.py  train_model.py
detector_back/worker/detector/detector/common/cfgs/: fssd_darknet53_cinethrax_gender.yaml  fssd_darknet53_falcon.yaml  fssd_lite_mobilenetv2_train_falcon.yaml  m2det_mobilenetv2_train_ntechlab.yaml  m2det_resnet50_train_celeb.yaml  (+17 more)
detector_back/worker/detector/detector/inference/: ssds.py
detector_back/worker/detector/detector/train/: data_augment.py  ssds_train.py
detector_back/worker/detector/gstreamer/: Dockerfile  Makefile
detector_back/worker/detector/gstreamer/gst-plugin/: configure.ac
detector_back/worker/detector/gstreamer/gst-plugin/src/: Makefile.am  gstdrawpredicts.c  gstdrawpredicts.h
detector_back/worker/detector/gstreamer/python/: average_meter.py  people_counter.py  predictor.py  tracker.py
detector_back/worker/detector/gstreamer/webrtc/: docker-compose.yaml
detector_back/worker/detector/sota-benchmark/: Dockerfile  Makefile  run.py
detector_front/: Dockerfile  README.md  package-lock.json  package.json
detector_front/nginx/: default.conf  nginx.conf
detector_front/public/: index.html
detector_front/src/: App.vue  main.js  routes.js  settings.js
detector_front/src/components/: Navbar.vue  PredsView.vue  Uploading.vue
(+52 files in other folders)
